--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
+
+:root {
+  --color-white: #ffffff;
+  --color-black: #000000;
+  --color-green: #c9f1ca;
+  --color-red: #c01c10;
+  --color-blue: #e8f5ff;
+  --color-primary-text: #393939;
+  --color-secondary-text: #908b8b;
+}
 
 body {
   margin: 0;
@@ -12,4 +22,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
