--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,12 @@
 :root {
   --color-white: #ffffff;
   --color-black: #000000;
-  --color-green: #c9f1ca;
+  --color-green: #14b41a;
   --color-red: #c01c10;
   --color-blue: #e8f5ff;
   --color-primary-text: #393939;
   --color-secondary-text: #908b8b;
+  --color-body: #e3e3e3;
 }
 
 body {
@@ -17,6 +18,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--color-body);
 }
 
 code {
